--- a/lecture3/lecture3/newyear/templates/newyear/index.html
+++ b/lecture3/lecture3/newyear/templates/newyear/index.html
@@ -4,6 +4,9 @@
         <title>NewYear</title>
     </head>
     <body>
-        
+      {% if NewYear%}
+        <h1>YES</h1>
+      {%else%}
+        <h1>NO</h1>
     </body>
 </html>
