--- a/lecture3/newyear/templates/newyear/index.html
+++ b/lecture3/newyear/templates/newyear/index.html
@@ -4,7 +4,7 @@
         <title>NewYear</title>
     </head>
     <body>
-      {% if newyear %}
+      {% if NewYear %}
         <h1>YES</h1>
       {%else%}
         <h1>NO</h1>
