--- a/lecture3/lecture3/newyear/templates/newyear/index.html
+++ b/lecture3/lecture3/newyear/templates/newyear/index.html
@@ -4,10 +4,10 @@
         <title>NewYear</title>
     </head>
     <body>
-        {%if newyear%}
+        {% if newyear %}
             <h1>YES</h1>
-        {%else}
+        {% else %}
             <h1>NO</h1>
-        {%endif%}
+        {% endif %}
     </body>
 </html>
