--- a/lecture3/lecture3/newyear/templates/newyear/index.html
+++ b/lecture3/lecture3/newyear/templates/newyear/index.html
@@ -3,5 +3,7 @@
     <head>
         <title>is it newyear</title>
     </head>
-    <body></body>
+    <body>
+        {% if newyear %}
+    </body>
 </html>
