--- a/lecture3/lecture3/newyear/templates/newyear/index.html
+++ b/lecture3/lecture3/newyear/templates/newyear/index.html
@@ -7,5 +7,7 @@
         {% if newyear %}
             <h1>YES</h1>
         {% else %}
+            <h1>NO</h1>
+        {% endif %}
     </body>
 </html>
