--- a/lecture3/lecture3/newyear/templates/newyear/index.html
+++ b/lecture3/lecture3/newyear/templates/newyear/index.html
@@ -3,6 +3,7 @@
 <html lng="en">
     <head>
         <title>is it newyear</title>
+        <link href="" rel="stylesheet">
     </head>
     <body>
         {% if newyear %}
